// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`uniform items: initial render shows first item selected 1`] = `
"> \x1B[32mAlpha\x1B[39m
  \x1B[32m\x1B[2mdetail a\x1B[22m\x1B[39m
  Beta
  \x1B[2mdetail b\x1B[22m
  Gamma
  \x1B[2mdetail c\x1B[22m
  Delta
  \x1B[2mdetail d\x1B[22m
  Epsilon
  \x1B[2mdetail e\x1B[22m
\x1B[2m  ↓ 3 more\x1B[22m


"
`;

exports[`uniform items: fewer items than budget shows all with padding 1`] = `
"> \x1B[32mAlpha\x1B[39m
  \x1B[32m\x1B[2mdetail a\x1B[22m\x1B[39m
  Beta
  \x1B[2mdetail b\x1B[22m
  Gamma
  \x1B[2mdetail c\x1B[22m







"
`;

exports[`empty items shows renderEmpty 1`] = `
"Nothing here.












"
`;

exports[`single item renders without scroll indicators 1`] = `
"> \x1B[32mAlpha\x1B[39m
  \x1B[32m\x1B[2mdetail a\x1B[22m\x1B[39m











"
`;
